kinda got the video working -- it isnt sized right

--- a/index.html
+++ b/index.html
@@ -129,8 +129,15 @@
     
 	<!-- content -->
 	<!-- image -->
-<div id='home-banner' class='banner'></div>
-
+<!-- <div id='home-banner' class='banner'></div> THIS IS THE OLD COVER--> 
+<div id='home-banner' class='banner'>
+	<div class="cover">
+	  <div class="hi">This is fully responsive;]</div>
+	</div>
+		<div class="tv">
+			  <div class="screen mute" id="tv"></div>
+	</div>
+</div> 
 <!-- quick links -->
 <div id='home-quick'>
 	<div>
