--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta property='og:type' content='website'>
     <meta property='og:image' content='assets/img/mcmurtry-fb.png'>
     <meta property='og:image:url' content='assets/img/mcmurtry-fb.png'>
+
     <meta property='og:image:width' content='470'>
     <meta property='og:image:width' content='190'>
     <meta property='og:url' content='index.html'>
@@ -130,14 +131,16 @@
 	<!-- content -->
 	<!-- image -->
 <!-- <div id='home-banner' class='banner'></div> THIS IS THE OLD COVER--> 
+
+
+
+
 <div id='home-banner' class='banner'>
-	<div class="cover">
-	  <div class="hi">This is fully responsive;]</div>
-	</div>
-		<div class="tv">
-			  <div class="screen mute" id="tv"></div>
-	</div>
+	<a class="player" data-property="{videoURL:'http://youtu.be/b-0KqpO35Rc',containment:'body',autoPlay:true, quality:'large',  mute:true, startAt:0,opacity:1}"></a>
 </div> 
+
+
+
 <!-- quick links -->
 <div id='home-quick'>
 	<div>
@@ -202,6 +205,17 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="assets/js/scripts.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script src="assets/js/modernizr.custom.js"></script>
+    <script src="assets/js/device.min.js"></script>
+	<script src="assets/js/jquery.wordrotator.js"></script>
+	<script src="assets/js/smooth-scroll.js"></script>
+  	<script src="assets/js/TweenMax.min.js"></script>
+  	<script src="assets/js/jquery.superscrollorama.js"></script>
+	<script src="assets/js/jquery.diamonds.js"></script>
+	<script src="assets/js/jquery.mb.YTPlayer.js"></script>
+	<script src="assets/js/scripts.js"></script>z
 
 </body>
 </html>
